<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2009  AndroidNerds.org
 * 
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.

 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */
-->

<resources>
    <string name="app_name">Aksunai</string>
    <string name="server_activity_title">Aksunai - Server List</string>
    <string name="server_detail_title">Aksunai - Server Details</string>
    
    <!-- Server Related Items -->
    <string name="new_server">New Server</string>
    <string name="create_new_server">Add a new server</string>
    
    <!-- User Interface Items -->
    <string name="done_label">Done</string>
    <string name="cancel_label">Cancel</string>
    <string name="title_label">Title</string>
    <string name="address_label">Server URL</string>
    <string name="username_label">Username</string>
    <string name="nick_label">Nickname</string>
    <string name="password_label">Password</string>
    <string name="port_label">Port</string>
    <string name="real_name_label">Real Name</string>
    <string name="autojoin_label">Channels to automatically join</string>
    <string name="autoconnect_label">Auto connect to this server</string>
    <string name="ui_getstarted">Type here and press enter to start chatting!</string>
    <string name="empty_chat_list">No Active Chats.</string>
    <string name="connecting">Connecting...</string>
    <string name="connecting_to">Connecting to</string>
    <string name="empty_user_list">No users in this channel!</string>
    <string name="send">Send</string>
    <string name="incoming_message">New IRC Message</string>
    <string name="new_private_chat">New Private Message</string>
    <string name="no_channel">Error: no active channel.</string>
    <string name="authenticated">You have been authenticated.</string>
    <string name="unknown_command">Unknown Command</string>
    <string name="required_fields">Title, Server, Port, Username, and Nickname are required</string>
    <string name="no_network_connection">No network connection is available</string>
    
    <!-- Menu Items -->
    <string name="chats">Chats</string>
    <string name="close">Close</string>
    <string name="disconnect">Disconnect</string>
    <string name="show_users">Show Users</string>
    <string name="menu_new_server">New Server</string>
    <string name="settings">Settings</string>
    <string name="quick_connect">Quick Connect</string>
    
    <!-- Context Menu Items -->
    <string name="options">Options</string>
    <string name="private_message">Private Message</string>
    <string name="info">Info</string>
    <string name="ignore">Ignore</string>
    <string name="connect">Connect</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_server_options">Server Options</string>
    
    <!-- Chat Info Dialog -->
    <string name="info_nickname">Nickname:</string>
    <string name="info_username">Username:</string>
    <string name="info_realname">Real Name:</string>
    <string name="info_server">Server: </string>
    <string name="info_channels">Channels:</string>
    <string name="info_title_part">Info for</string>

    <!-- Chat Dialog -->
    <string name="has_joined">has joined</string>
    <string name="has_left">has left</string>
    <string name="has_quit">has quit</string>
    <string name="nick_change">is now known as</string>
    
    <!-- Preference Strings -->
    <string name="general_pref_label">General Settings</string>
    <string name="pref_large_font_label">Use large fonts</string>
    
    <string name="notification_pref_label">Notification Settings</string>
    <string name="pref_notification_bar_label">Chat Notifications</string>
    <string name="pref_notification_bar_desc">Notify when your nick is said or pm arrives.</string>
    <string name="notification_ringtone_title">Select ringtone</string>
    <string name="pref_notification_vibrate_title">Vibrate</string>
    <string name="pref_notification_vibrate_desc">Also vibrate when message received.</string>
    
	<string name="pref_information_label">About</string>
	<string name="software_version_title">Software Version</string>
	<string name="software_version">0.5</string>
	<string name="software_license_title">Software License</string>
	<string name="software_license">General Public License v2</string>
	<string name="software_support_title">Contact Support</string>
	<string name="software_support">support@androidnerds.org</string>
	<string name="software_bugs_title">File a bug</string>
	<string name="software_bugs">http://code.google.com/p/aksunai</string>
	
    <string name="logging_pref_label">Logging Settings</string>
    <string name="pref_logging_enabled_label">Enabled Logging</string>
    <string name="pref_logging_enabled_desc">Log chat messages to the sdcard</string>
    <string name="pref_only_notify_nick">Log nick only</string>
    <string name="pref_only_notify_nick_desc">Only log when nickname is said</string>

    <!-- Notification strings -->
    <string name="notify_new_private_chat">New Private Message</string>
	<string name="notify_nick_in_chat">New Nick Message</string>
</resources>
