<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2009  AndroidNerds.org
 * 
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.

 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */
-->

<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	<PreferenceCategory
	   android:title="@string/notification_pref_label">
	
	   <CheckBoxPreference
	       android:key="pref_notification_bar"
	       android:title="@string/pref_notification_bar_label"
	       android:summary="@string/pref_notification_bar_desc" />
	       
	   <org.androidnerds.app.aksunai.preferences.AkRingtonePreference
                android:layout="?android:attr/preferenceLayoutChild"
                android:dependency="pref_notification_bar"
                android:key="notification-ringtone"
                android:persistent="false"
                android:title="@string/notification_ringtone_title"
                android:ringtoneType="notification" />
                
       <CheckBoxPreference
            android:key="pref_notification_vibrate"
            android:title="@string/pref_notification_vibrate_title"
            android:summary="@string/pref_notification_vibrate_desc"
 			android:dependency="pref_notification_bar"/>
                
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/pref_information_label">
		
		<Preference
			android:key="software_version"
			style="?android:preferenceInformationStyle"
			android:title="@string/software_version_title"
			android:summary="@string/software_version" />
			
		<Preference
			android:key="software_license"
			style="?android:preferenceInformationStyle"
			android:title="@string/software_license_title"
			android:summary="@string/software_license" />
			
		<Preference
			android:key="software_support"
			style="?android:preferenceInformationStyle"
			android:title="@string/software_support_title"
			android:summary="@string/software_support" />
			
		<Preference
			android:key="software_bugs"
			style="?android:preferenceInformationStyle"
			android:title="@string/software_bugs_title"
			android:summary="@string/software_bugs" />
			
	</PreferenceCategory>
	
	<!--<PreferenceCategory
		android:title="@string/logging_pref_label">
	
		<CheckBoxPreference
			android:key="pref_logging_key"
			android:title="@string/pref_logging_enabled_label"
			android:summary="@string/pref_logging_enabled_desc"
			android:defaultValue="false" />
			
		<CheckBoxPreference
			android:key="pref_log_only_nick"
			android:title="@string/pref_only_notify_nick"
			android:summary="@string/pref_only_notify_nick_desc"
			android:defaultValue="false" />
	</PreferenceCategory>-->

</PreferenceScreen>