<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Copyright (C) 2009 AndroidNerds.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="5dip">
	
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:layout_weight="1"
		android:fillViewport="true">
		
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">
			
			<TextView
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="#ffffff"
				android:text="@string/title_label"
				android:paddingLeft="4dip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
			
			<EditText
				android:id="@+id/detail_title"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="6dip"
				android:singleLine="true"/>
				
			<View
				android:layout_width="fill_parent"
				android:layout_height="1dip"
				android:layout_alignParentBottom="true"
				android:background="?android:attr/listDivider"/>
				
			<TextView
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="#ffffff"
				android:text="@string/address_label"
				android:paddingLeft="4dip"
				android:paddingTop="7dip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
				
			<EditText
				android:id="@+id/detail_address"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="6dip"
				android:singleLine="true"/>
			
			<View
				android:layout_width="fill_parent"
				android:layout_height="1dip"
				android:layout_alignParentBottom="true"
				android:background="?android:attr/listDivider"/>
				
			<TextView
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="#ffffff"
				android:text="@string/port_label"
				android:paddingLeft="4dip"
				android:paddingTop="7dip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
				
			<EditText
				android:id="@+id/detail_port"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="6dip"
				android:text="6667"
				android:singleLine="true"/>
				
			<View
				android:layout_width="fill_parent"
				android:layout_height="1dip"
				android:layout_alignParentBottom="true"
				android:background="?android:attr/listDivider"/>
				
			<TextView
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="#ffffff"
				android:text="@string/username_label"
				android:paddingLeft="4dip"
				android:paddingTop="7dip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
				
			<EditText
				android:id="@+id/detail_username"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="6dip"
				android:singleLine="true"/>
				
			<View
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:background="?android:attr/listDivider"/>
				
			<TextView
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="#ffffff"
				android:text="@string/nick_label"
				android:paddingLeft="4dip"
				android:paddingTop="7dip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
				
			<EditText
				android:id="@+id/detail_nick"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="6dip"
				android:singleLine="true"/>
				
			<View
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:background="?android:attr/listDivider"/>
				
			<TextView
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="#ffffff"
				android:text="@string/real_name_label"
				android:paddingLeft="4dip"
				android:paddingTop="7dip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
				
			<EditText
				android:id="@+id/detail_real_name"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="6dip"
				android:singleLine="true"/>
				
			<View
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:background="?android:attr/listDivider"/>
				
			<TextView
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="#ffffff"
				android:text="@string/password_label"
				android:paddingLeft="4dip"
				android:paddingTop="7dip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
				
			<EditText
				android:id="@+id/detail_password"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="6dip"
				android:inputType="textPassword"/>
		</LinearLayout>
	</ScrollView>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		style="@android:style/ButtonBar">
		
		<Button
			android:id="@+id/new_confirm"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/done_label"/>
			
		<Button
			android:id="@+id/btn_discard"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/cancel_label"/>
	</LinearLayout>
		
</LinearLayout>